Update dependencies and migrate code Refs #1
* Migrate Spring dependencies from v3 to v4 (Boot, Shell, Actuator, etc.)
* Upgrade Jackson from v2 to v3
* Set the minimum Java version to 17
* Update other key dependencies (e.g., sshd-core)
* Test all features (excluding test code) and fix bugs

---

* Spring 의존성(Boot, Shell, Actuator 등)을 v3에서 v4로 마이그레이션
* Jackson을 v2에서 v3로 업그레이드
* Java 최소 버전을 17로 설정
* 기타 주요 의존성(sshd-core 등)도 업데이트
* 테스트 코드를 제외한 모든 기능 테스트 및 버그 수정